# projeto_cadastro_streamlit

./: Cadastro.py  clientes.csv  pyproject.toml
pages/: Consulta.py
